@@ -1,3 +1,13 @@
+2018-12-13  Mark Lam  <mark.lam@apple.com>
+
+        Add a missing exception check.
+        https://bugs.webkit.org/show_bug.cgi?id=192626
+        <rdar://problem/46662163>
+
+        Reviewed by Keith Miller.
+
+        * runtime/ScopedArguments.h:
+
 2018-12-13  Saam Barati  <sbarati@apple.com>
 
         The JSC shell should listen for memory pressure events and respond to them
